--- a/TODO.txt
+++ b/TODO.txt
@@ -1,9 +1,10 @@
 * Experiment with revision to fble literals.
- - Experiment with next revision to how literals are defined.
- - Figure out why error message "expected spec to have exactly four fields, but %t has %i\n" ... seems to give bogus number of actual fields.
-   If not obsolete
+ - Update implementation for updated spec.
+ - Add test for wrong order list fields.
+ - Add test for different name list fields. 
+ - Add test that list literal doesn't need to consist of letters.
+ - Add tests to increase code coverage.
  - Add spec tests to expand coverage of literal compilation code.
-   If not obsolete
 
 Fblf:
 * Set up fblf compilation test infrastructure.
