--- a/TODO.txt
+++ b/TODO.txt
@@ -9,8 +9,6 @@ Fblf:
    inlining, leading to a sort of exponential blowup of logic.
  - But what's a good approach to solving it?
 * Rewrite tests for /Fblf/Heap%.
-* Come up with a better name for SeqL?
-* Factor out common code for converting Hex lits to Bit lits.
 * Figure out how to replace fblf integer arithmetic with a native c
   implementation at compile time.
   - See how much faster it is now.
@@ -133,6 +131,9 @@ Exec:
 * Clean up fble test framework
  - Use AssertEquals for more of the tests.
  - Properly test the test infra.
+ - Add way to write 'skip' test and/or 'expect_fail' test?
+   For example, so we can have the fblf md5 tests, compile them, skip them
+   because they are too slow, and report on how many were skipped and why.
 
 * Figure out why we need an extra print in RunTest and other Stdio apps.
  Does the program end before we have a chance to put all the output?
@@ -141,6 +142,8 @@ Exec:
 
 * Use PushAnonVar in typecheck.c for elaborate expression instead of accessing
   scope->vars.size directly.
+  Will need to add back PushAnonVar function that pushes 'NULL' to the list of
+  vars.
 
 * Improve type error in case of this?
   <@ T@>{ Maybe@<T@>; } Nothing = <@ T@> { Maybe@<T@>(nothing: Unit@()); };
