--- a/TODO.txt
+++ b/TODO.txt
@@ -1,9 +1,6 @@
 Fblf:
-* Figure out how to compile full Md5 with the memory available on my computer.
-  Right now restricting into 1 of the 16 XX calls in the Round function makes
-  it so compilation only takes 50% of my computers memory.
-
-* Re-enable full Md5.
+* Figure out how to make the compiled fblf md5 program small enough for the C
+  compiler to compile on my computer.
 
 * Clean up fblf compilation test infrastructure.
  - Fix it so we can have multiple tests with non-empty environments.
