--- a/TODO.txt
+++ b/TODO.txt
@@ -1,11 +1,6 @@
 Fblf:
-* Another round of fblf rewrites
- - Change ProcId to be Int.
- - Module should call body once for declaration of procedures with args (0,0),
-   (1,0), ..., And then again every time it is instantiated with args
-   initialized from the callers. That way it's safe to use variables and
-   fields and statements locally and return them as is and use them in
-   callers.
+* Think about whether it's worth optimizing modules to avoid traversing
+  submodules for every parent in a module's hierarchy.
 
 * Add nicer summary and error messages in compiled fblf test runner.
 
